Prevent bg overlap

--- a/index.css
+++ b/index.css
@@ -1,10 +1,13 @@
 font {
   src: url('../fonts/BebasNeue/BebasNeue Thin.otf') format('opentype');
 }
+
 body {
-  background-image: url("moon.jpeg");
+  background-image: url("bg.jpg");
   background-attachment: fixed;
   background-size:100%;
+  background-size: cover;
+  background-repeat: no-repeat;
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
@@ -14,7 +17,7 @@ body {
   font-weight: 575;
 }
 
-h2{
+h2 {
   text-align: center;
   font-size: 300%;
   padding-top: 8%;
@@ -22,7 +25,7 @@ h2{
 
 }
 
-p{
+p {
   text-align: center;
   font-size: 270%;
   font-family: Georgia, serif;
@@ -30,7 +33,7 @@ p{
   
 }
 
-img {
+#profileIcon {
   border:solid 6px;
   border-color:#514573;
   border-radius:100%;
